--- a/jenkins/battlecity-server/Jenkinsfile
+++ b/jenkins/battlecity-server/Jenkinsfile
@@ -8,10 +8,26 @@ pipeline {
             }
         }
 
-        stage('Build base image for codebattle-server') {
+/*      Needs to be run only once to create base image */
+//        stage('Build base image for codebattle-server') {
+//            steps {
+//                sh 'docker build --no-cache -t izhevsk-code-battle/codebattle-server-src -f dockerfile/codebattle-server .'
+//            }
+//        }
+
+        stage('Build Docker-image for battleship server') {
             steps {
-                sh 'docker build --no-cache -t izhevsk-code-battle/codebattle-server-src -f dockerfile/codebattle-server .'
+                sh 'docker build --no-cache -t izhevsk-code-battle/codebattle-deploy-local -f dockerfile/codebattle-deploy-local .'
             }
         }
+
+        stage('Stop running server') {
+            sh 'docker stop $(docker ps -a -q --filter ancestor=izhevsk-code-battle/codebattle-deploy-local --format="{{.ID}}")'
+        }
+
+        stage('Run battleship') {
+            sh 'docker run -d -p 8080:8080 izhevsk-code-battle/codebattle-deploy-local:latest'
+        }
+
     }
 }
