--- a/jenkins/codebattle-site/Jenkinsfile
+++ b/jenkins/codebattle-site/Jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
     stages {
         stage('Checkout site sources') {
             steps {
-                git branch: 'main-branch',
+                git branch: 'master',
                         url: 'https://github.com/IzhevskCodeBattle/codebattle-site'
             }
         }
